--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "test",
+  "name": "questspace-web",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint",
-    "build": "next build",
+    "build": "next build && next export",
+    "serve": "npx serve ./out",
     "export": "next export"
   },
   "dependencies": {
@@ -15,7 +17,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "next": "12.0.3",
+    "next": "^12.1.0",
     "next-translate": "^1.2.0",
     "polished": "^4.1.3",
     "react": "17.0.2",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "eslint": "7",
-    "eslint-config-next": "12.0.3"
+    "eslint-config-next": "12.0.3",
+    "next-export-i18n": "^1.4.2"
   }
 }
