--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "questspace-web",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
+  "homepage": "./",
   "scripts": {
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint",
     "build": "next build && next export",
     "serve": "npx serve ./out",
-    "export": "next export"
+    "export": "next export",
+    "deploy": "npm run build && npx ipfs-deploy out/ -p pinata -d cloudflare -O"
   },
   "dependencies": {
     "@emotion/react": "^11.5.0",
@@ -27,6 +29,8 @@
     "react-sliding-side-panel": "^2.0.3"
   },
   "devDependencies": {
+    "@pinata/sdk": "^1.1.23",
+    "dotenv": "^16.0.0",
     "eslint": "7",
     "eslint-config-next": "12.0.3",
     "next-export-i18n": "^1.4.2"
