--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@vercel/analytics": "^1.1.1",
     "next": "^12.1.0",
     "next-translate": "^1.2.0",
     "polished": "^4.1.3",
